fix: overflow and scroling on phone

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import "./constants.css";
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap");
 
-html,body {
+html,
+body {
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -11,11 +12,10 @@ html,body {
   height: 100%;
 }
 
-.App{
+.App {
   display: grid;
   place-content: center;
   height: 100vh;
   background: var(--bg-color);
   font-family: "Sofia Sans", sans-serif;
-
 }
